--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -32,11 +32,11 @@
 
 @media only screen and (min-width: 360px) and (max-width: 479px) {
     .navbar {top: 30px;}
-    .navbar-light .navbar-toggler { color: #000; border-color: transparent; position: absolute; top: -11px; }
+    .navbar-light .navbar-toggler { color: #000; border-color: transparent; position: relative; top: -27px; margin-right: 1rem; }
     .mainmenu i { margin-right: 10px; position: absolute; right: 0; }
     i.fa-solid.fa-user { right: 30px; }
    a.navbar-brand { font-weight: 900; font-size: 40px; position: absolute; left: 50%; transform: translate(-50%, -50%); top: 50%; }
-   #slider1 { margin-top: 60px; }
+   #slider1 { margin-top: 0px; }
    #section2 { margin-top: 0px; }
    .section3 {margin-top: 30px; height: 200px;}
    .section3 img { width: 100%; height: 100%; object-fit: cover; object-position: top; }
